fixing some jira bugs