@@ -591,7 +591,7 @@ public class RangeSeekBar<T extends Number> extends ImageView {
         /**
          * Converts a normalized value to a Number object in the value space between absolute minimum and maximum.
          * 
-         * @param normalized
+         * @param step
          * @return
          */
         @SuppressWarnings("unchecked")
@@ -713,17 +713,17 @@ public class RangeSeekBar<T extends Number> extends ImageView {
                 public Number toNumber(double value) {
                         switch (this) {
                         case LONG:
-                                return new Long((long) value);
+                                return Long.valueOf((long) value);
                         case DOUBLE:
                                 return value;
                         case INTEGER:
-                                return new Integer((int) value);
+                                return Integer.valueOf((int) value);
                         case FLOAT:
-                                return new Float(value);
+                                return Float.valueOf((float)value);
                         case SHORT:
-                                return new Short((short) value);
+                                return Short.valueOf((short) value);
                         case BYTE:
-                                return new Byte((byte) value);
+                                return Byte.valueOf((byte) value);
                         case BIG_DECIMAL:
                                 return new BigDecimal(value);
                         }
